--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,7 @@ navbar-links:
     - Projects: "grants"
     - Students: "students"
     - SPAMLab: "https://spamlab.github.io"
+    - OpenStereo: "openstereo_chg"
   Publications: "publications"
   Blog:
     - Posts: "blog"
