--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -2,4 +2,4 @@
 deployment:
   tasks:
     - export DEPLOYPATH=/home/kirclk/public_html/
-    - cp -R /home/kirclk/repositories/gitrepo/_site/ $DEPLOYPATH
+    - /bin/cp -R /home/kirclk/repositories/gitrepo/_site/* $DEPLOYPATH
